Archive2/ff/a2a38d4a3be627/output
main.cpp: In function 'int main()':
main.cpp:10:20: error: 'mem_fn' is not a member of 'std'
     auto convert = std::mem_fn(&std::string::c_str);
                    ^
